--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "grunt-html2js": "^0.2.4",
     "grunt-karma": "^0.8.2",
     "grunt-ng-annotate": "^0.3.2",
+    "grunt-parallel": "^0.4.1",
     "karma": "^0.12.31",
     "karma-chrome-launcher": "^0.1.3",
     "karma-coffee-preprocessor": "^0.2.1",
