--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,9 @@
     "angular-bootstrap": "~0.12.0",
     "angular-ui-router": "~0.2.13"
   },
-  "dependencies": {},
+  "dependencies": {
+    "angular-bootstrap-lightbox": "~0.10.0"
+  },
   "resolutions": {
     "angular": "1.3.15"
   }
