--- a/bower.json
+++ b/bower.json
@@ -11,9 +11,11 @@
     "angular-ui-router": "~0.2.13"
   },
   "dependencies": {
-    "angular-bootstrap-lightbox": "~0.10.0"
+    "angular-bootstrap-lightbox": "~0.10.0",
+    "angular-bootstrap": "~1.0.0"
   },
   "resolutions": {
-    "angular": "1.3.15"
+    "angular": "1.3.15",
+    "angular-bootstrap": "^0.14.3"
   }
 }
